--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <title>demo</title>
@@ -11,13 +10,20 @@
 </script>
 <style>
 @font-face {
-  font-family: 'iconfont';  /* project id 1079612 */
-  src: url('//at.alicdn.com/t/font_1079612_rwr3vq0qc2n.eot');
-  src: url('//at.alicdn.com/t/font_1079612_rwr3vq0qc2n.eot?#iefix') format('embedded-opentype'),
-  url('//at.alicdn.com/t/font_1079612_rwr3vq0qc2n.woff2') format('woff2'),
-  url('//at.alicdn.com/t/font_1079612_rwr3vq0qc2n.woff') format('woff'),
-  url('//at.alicdn.com/t/font_1079612_rwr3vq0qc2n.ttf') format('truetype'),
-  url('//at.alicdn.com/t/font_1079612_rwr3vq0qc2n.svg#iconfont') format('svg');
+  font-family: 'iconfont';
+  src: url('../static/font/iconfont.eot');
+  src: url('../static/font/iconfont.eot?#iefix') format('embedded-opentype'),
+      url('../static/font/iconfont.woff2') format('woff2'),
+      url('../static/font/iconfont.woff') format('woff'),
+      url('../static/font/iconfont.ttf') format('truetype'),
+      url('../static/font/iconfont.svg#iconfont') format('svg');
+}
+.iconfont {
+  font-family: "iconfont" !important;
+  font-size: 1rem;
+  font-style: normal;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
   * {
     margin: 0;
